--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = olikraus/U8g2@^2.34.17
+lib_deps = 
+	olikraus/U8g2@^2.34.17
+	olikraus/U8glib@^1.19.1
