Feat: add esp32 config

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
+; ARDUINO NANO OLD BOOTLOADER CONFIG
+; [env:nanoatmega328]
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
+
+; ESP32 DEVKITC CONFIG
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
+monitor_speed = 115200
+
 lib_deps = 
 	olikraus/U8g2@^2.34.17
