--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-
 lib_deps = 
 	olikraus/U8g2@^2.34.17
+	adafruit/Adafruit MLX90614 Library@^2.1.3
